[package]
name = "siwa"
version = "0.1.0"
authors = ["Tom Pusateri <pusateri@bangj.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
base64 = "0.12"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }